# frikadellen-fancy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  src_diffs.txt
.compare_tmp/: src_upstream_hashes.txt  src_workspace_hashes.txt  upstream_hashes.txt  workspace_hashes.txt
.github/: copilot-instructions.md
.github/workflows/: autoformat.yml  ci.yml  release.yml
Frikadellen.UI/: App.axaml  App.axaml.cs  Frikadellen.UI.csproj  README.md  app.manifest
Frikadellen.UI/Models/: Models.cs
Frikadellen.UI/Services/: BackendClient.cs  BackendSocket.cs  MockDataService.cs  RustProcessLauncher.cs  SettingsService.cs
Frikadellen.UI/ViewModels/: BoolToStringConverter.cs  ConfigViewModel.cs  ConsoleViewModel.cs  DashboardViewModel.cs  EventsViewModel.cs  LoginViewModel.cs  MainWindowViewModel.cs  NotifierViewModel.cs  RelayCommand.cs  SettingsViewModel.cs  SplashViewModel.cs  ViewModelBase.cs
Frikadellen.UI/Views/: AnalyticsView.axaml  BazaarView.axaml  ConfigView.axaml  ConsoleView.axaml  DashboardView.axaml  DashboardView.axaml.cs  EventsView.axaml  LoginView.axaml  MainWindow.axaml  MainWindow.axaml.cs  NotifierView.axaml  SettingsView.axaml  SettingsView.axaml.cs  SplashView.axaml
installer/: README.md  RELEASE_NOTES_v3.0.0.md  build-installer.ps1  frikadellen_installer.iss
installer/patches/: 0001-stage-0.patch
scripts/: create_release_helper.ps1
src/: lib.rs  main.rs  types.rs  webhook.rs
src/anti_detection/: mod.rs
src/bot/: README.md  client.rs  handlers.rs
src/config/: loader.rs  types.rs
src/discord/: mod.rs
src/gui/: slot_manager.rs  window_handler.rs
(+14 files in other folders)
