[package]
name = "frikadellen-fancy"
version = "3.0.0"
edition = "2021"
authors = ["TreXito"]
description = "Frikadellen BAFF (Bazaar Auction Flipper *Fancy*) for Hypixel Skyblock - Rust port using Azalea"
license = "MIT"

[dependencies]
# Azalea Minecraft bot framework
azalea = "0.15"
azalea-protocol = "0.15"
azalea-inventory = "0.15"
azalea-client = "0.15"
azalea-chat = "0.15"
bevy_app = "0.18"
bevy_ecs = "0.18"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = "0.3"

# Networking
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
once_cell = "1.19"
parking_lot = "0.12"
regex = "1.10"
dirs = "5.0"

# CLI interaction
dialoguer = "0.11"
atty = "0.2"

# Web GUI
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = "0.1"

# Discord bot
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
